--- a/AlarmeDeluxe/app/src/main/res/layout/fragment_accelerometer.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/fragment_accelerometer.xml
@@ -9,6 +9,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hello_home_fragment" />
+        android:text="hello_accelerometer_fragment" />
 
 </FrameLayout>
