--- a/AlarmeDeluxe/app/src/main/res/layout/fragment_settings.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/fragment_settings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +9,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="hello_settings_fragment" />
 
 </FrameLayout>
