--- a/AlarmeDeluxe/app/src/main/res/layout/activity_main.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
+        android:background="@color/header"
         android:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -18,8 +18,10 @@
 
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/tabs"
+        android:background="@color/header"
         app:pstsShouldExpand="true"
         app:pstsTextAllCaps="true"
+        app:pstsIndicatorColor="@color/selectedTab"
         android:layout_width="match_parent"
         android:layout_height="48dp" />
 
