--- a/AlarmeDeluxe/app/src/main/res/layout/activity_main.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,11 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_scrollFlags="scroll|enterAlways"
         android:layout_alignParentTop="true"
         android:background="@color/header"
-        android:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
     <com.astuetz.PagerSlidingTabStrip
