--- a/AlarmeDeluxe/app/src/main/res/layout/fragment_home.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/fragment_home.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ca.ulaval.ima.mp.alarmedeluxe.fragment.HomeFragment">
-
-
-    <android.support.design.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list_alarms"
@@ -26,6 +20,5 @@
             android:src="@mipmap/ic_newalarm"
             app:layout_anchor="@id/list_alarms"
             app:layout_anchorGravity="bottom|right|end" />
-    </android.support.design.widget.CoordinatorLayout>
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
