--- a/AlarmeDeluxe/app/src/main/res/layout/activity_alarm_making.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/activity_alarm_making.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -64,8 +65,7 @@
             <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/spinner"
-                android:entries="@array/spinner_elements"/>
+                android:id="@+id/spinner" />
 
             <Button
                 android:text="Create Alarm"
