--- a/AlarmeDeluxe/app/src/main/res/layout/fragment_geolocation.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/fragment_geolocation.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ca.ulaval.ima.mp.alarmedeluxe.fragment.GeolocationFragment">
+    tools:context="ca.ulaval.ima.mp.alarmedeluxe.customization.GeolocationFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
