--- a/AlarmeDeluxe/app/src/main/res/layout/alarm_list_row.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/alarm_list_row.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:focusable="true"
 android:paddingLeft="16dp"
@@ -9,21 +10,37 @@ android:paddingTop="10dp"
 android:paddingBottom="10dp"
 android:clickable="true"
 android:background="?android:attr/selectableItemBackground"
-android:orientation="vertical">
+android:orientation="horizontal">
 
-<TextView
-    android:id="@+id/alarm_title"
-    android:textColor="@color/selectedTab"
-    android:textSize="16dp"
-    android:textStyle="bold"
-    android:layout_alignParentTop="true"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:paddingRight="10dp">
 
-<TextView
-    android:id="@+id/alarm_time"
-    android:layout_below="@id/alarm_title"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/alarm_toggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@mipmap/ic_activatedclock" />
+    </FrameLayout>
 
-</RelativeLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+        android:id="@+id/alarm_title"
+        android:textColor="@color/selectedTab"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+        <TextView
+        android:id="@+id/alarm_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    </LinearLayout>
+
+</LinearLayout>
