--- a/AlarmeDeluxe/app/src/main/res/layout/alarmtype_spinner_row.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/alarmtype_spinner_row.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -26,8 +26,10 @@
         <TextView
             android:text="TextView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/alarm_type_name" />
+            android:layout_height="match_parent"
+            android:id="@+id/alarm_type_name"
+            android:gravity="center_vertical"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
