--- a/AlarmeDeluxe/app/src/main/res/layout/activity_youtube_alarm.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/activity_youtube_alarm.xml
@@ -5,4 +5,46 @@
         android:id="@+id/youtube_player"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <TextView
+        android:text="Your current rating is :"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lblCurrentRating"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="11dp"
+        android:layout_marginStart="11dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/lblCurrentRating"
+        android:layout_toRightOf="@+id/lblCurrentRating"
+        android:layout_toEndOf="@+id/lblCurrentRating"
+        android:layout_marginLeft="44dp"
+        android:layout_marginStart="44dp"
+        android:id="@+id/lblRating" />
+
+    <Button
+        android:text="Like"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lblCurrentRating"
+        android:layout_alignLeft="@+id/lblCurrentRating"
+        android:layout_alignStart="@+id/lblCurrentRating"
+        android:layout_marginTop="92dp"
+        android:id="@+id/btnLike" />
+
+    <Button
+        android:text="Dislike"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnDislike"
+        android:layout_alignBaseline="@+id/btnLike"
+        android:layout_alignBottom="@+id/btnLike"
+        android:layout_toRightOf="@+id/lblRating"
+        android:layout_toEndOf="@+id/lblRating" />
 </RelativeLayout>
