--- a/AlarmeDeluxe/app/src/main/res/layout/activity_alarm_making.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/activity_alarm_making.xml
@@ -131,7 +131,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnCreate"
-                android:onClick="onButtonClick"/>
+                android:onClick="onButtonClick"
+                style="@android:style/Widget.Material.Button.Borderless" />
 
         </LinearLayout>
     </ScrollView>
