--- a/AlarmeDeluxe/app/src/main/res/layout/fragment_alarmringing_accelerometer.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/fragment_alarmringing_accelerometer.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ca.ulaval.ima.mp.alarmedeluxe.customization.AccelerometerFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ProgressBar
+        style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hello_accelerometer_fragment" />
-
-</FrameLayout>
+        android:id="@+id/shaking_progressBar"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+</RelativeLayout>
