--- a/AlarmeDeluxe/app/src/main/res/values/colors.xml
+++ b/AlarmeDeluxe/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff4081</color>
     <color name="header">#4ABDAC</color>
     <color name="selectedTab">#FC4A1A</color>
     <color name="tabText">#DFDCE3</color>
