--- a/AlarmeDeluxe/app/src/main/res/layout/activity_alarm_making.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/activity_alarm_making.xml
@@ -126,6 +126,12 @@
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp" />
 
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/spn_alarmTypes" />
+
             <Button
                 android:text="Create Alarm"
                 android:layout_width="match_parent"
