--- a/AlarmeDeluxe/app/src/main/res/layout/fragment_youtube.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/fragment_youtube.xml
@@ -7,13 +7,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <!-- TODO: Update blank fragment layout -->
 
         <TextView
             android:id="@+id/connection_status"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="hello_youtube_fragment" />
+            android:text="" />
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
