--- a/AlarmeDeluxe/app/src/main/res/layout/alarm_list_row.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/alarm_list_row.xml
@@ -10,57 +10,72 @@ android:paddingTop="10dp"
 android:paddingBottom="10dp"
 android:clickable="true"
 android:background="?android:attr/selectableItemBackground"
-android:orientation="horizontal">
+android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:id="@+id/layout_checkbox_alarm"
-        android:visibility="gone"
-        android:padding="0dp"
-        android:layout_margin="0dp">
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_delete_alarm"
-            android:id="@+id/btn_deleteAlarm"
-            android:scaleX="0.5"
-            android:scaleY="0.5"
-            android:background="@drawable/background_tab" />
-    </LinearLayout>
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:paddingRight="10dp">
-
-        <ImageView
-            android:id="@+id/alarm_toggle"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_activatedclock" />
-    </FrameLayout>
+            android:gravity="center_vertical"
+            android:id="@+id/layout_checkbox_alarm"
+            android:visibility="gone"
+            android:padding="0dp"
+            android:layout_margin="0dp">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_delete_alarm"
+                android:id="@+id/btn_deleteAlarm"
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                android:background="@drawable/background_tab" />
+        </LinearLayout>
 
-        <TextView
-        android:id="@+id/alarm_title"
-        android:textColor="@color/selectedTab"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingRight="10dp">
 
-        <TextView
-        android:id="@+id/alarm_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <ImageView
+                android:id="@+id/alarm_toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_activatedclock" />
+        </FrameLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+            android:id="@+id/alarm_title"
+            android:textColor="@color/selectedTab"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+            <TextView
+            android:id="@+id/alarm_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+                android:text="10:50"
+                android:textSize="24sp"
+                android:textStyle="normal|bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/alarm_description"
+                android:layout_weight="1" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
