--- a/AlarmeDeluxe/app/src/main/res/layout/activity_youtube_alarm.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/activity_youtube_alarm.xml
@@ -11,32 +11,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/lblCurrentRating"
-        android:layout_centerVertical="true"
+        android:layout_marginLeft="13dp"
+        android:layout_marginStart="13dp"
+        android:layout_alignBaseline="@+id/lblRating"
+        android:layout_alignBottom="@+id/lblRating"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="11dp"
-        android:layout_marginStart="11dp" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:text="unknown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/lblCurrentRating"
-        android:layout_toRightOf="@+id/lblCurrentRating"
-        android:layout_toEndOf="@+id/lblCurrentRating"
-        android:layout_marginLeft="44dp"
-        android:layout_marginStart="44dp"
-        android:id="@+id/lblRating" />
+        android:id="@+id/lblRating"
+        android:layout_marginRight="19dp"
+        android:layout_marginEnd="19dp"
+        android:layout_above="@+id/btnDislike"
+        android:layout_alignRight="@+id/sign_in_button"
+        android:layout_alignEnd="@+id/sign_in_button"
+        android:layout_marginBottom="53dp" />
 
     <Button
         android:text="Like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lblCurrentRating"
+        android:id="@+id/btnLike"
+        android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/lblCurrentRating"
         android:layout_alignStart="@+id/lblCurrentRating"
-        android:layout_marginTop="92dp"
-        android:id="@+id/btnLike" />
+        android:layout_marginBottom="68dp" />
 
     <Button
         android:text="Dislike"
@@ -47,4 +49,11 @@
         android:layout_alignBottom="@+id/btnLike"
         android:layout_toRightOf="@+id/lblRating"
         android:layout_toEndOf="@+id/lblRating" />
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="72dp"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
