--- a/AlarmeDeluxe/app/src/main/res/layout/fragment_youtube.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/fragment_youtube.xml
@@ -33,6 +33,37 @@
             android:layout_toRightOf="@+id/sign_in_button"
             android:layout_toEndOf="@+id/sign_in_button" />
 
+        <TextView
+            android:id="@+id/currentRating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/sign_in_button"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="73dp"
+            android:text="unknown" />
+
+        <Button
+            android:text="Like"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnLike"
+            android:layout_alignParentBottom="true"
+            android:layout_alignLeft="@+id/lblCurrentRating"
+            android:layout_alignStart="@+id/lblCurrentRating"
+            android:layout_marginBottom="68dp" />
+
+        <Button
+            android:text="Dislike"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnDislike"
+            android:layout_marginRight="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_alignBaseline="@+id/btnLike"
+            android:layout_alignBottom="@+id/btnLike"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
 
     </RelativeLayout>
 
