Youtube alarms can be created and launched

--- a/AlarmeDeluxe/app/src/main/res/layout/fragment_youtube.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/fragment_youtube.xml
@@ -1,18 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ca.ulaval.ima.mp.alarmedeluxe.customization.YoutubeFragment">
-    <RelativeLayout
+    tools:context="ca.ulaval.ima.mp.alarmedeluxe.customization.YoutubeFragment"
+    android:orientation="vertical">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp">
 
         <TextView
-            android:id="@+id/connection_status"
+            android:text="Custom YouTube alarms"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="" />
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list_youtube_alarms"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:text="No YouTube alarms set"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_no_youtube_alarms"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:text="Create custom type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView3"
+            android:textSize="18sp"
+            android:textStyle="normal|bold" />
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
@@ -21,50 +57,30 @@
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
 
-        <Button
-            android:text="Log out"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/sign_out_button"
-            android:visibility="gone"
-            android:layout_marginTop="19dp"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/sign_in_button"
-            android:layout_toEndOf="@+id/sign_in_button" />
+        <SearchView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/txt_youtube_search"/>
 
-        <TextView
-            android:id="@+id/currentRating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/sign_in_button"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="73dp"
-            android:text="unknown" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
 
-        <Button
-            android:text="Like"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnLike"
-            android:layout_alignParentBottom="true"
-            android:layout_alignLeft="@+id/lblCurrentRating"
-            android:layout_alignStart="@+id/lblCurrentRating"
-            android:layout_marginBottom="68dp" />
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/youtube_list_search"/>
+        </LinearLayout>
 
-        <Button
-            android:text="Dislike"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnDislike"
-            android:layout_marginRight="12dp"
-            android:layout_marginEnd="12dp"
-            android:layout_alignBaseline="@+id/btnLike"
-            android:layout_alignBottom="@+id/btnLike"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+    </LinearLayout>
 
+    <Button
+        android:text="Add"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_newyoutube"
+        android:layout_marginTop="15dp" />
+</LinearLayout>
 
-    </RelativeLayout>
-
-
-</FrameLayout>
+</ScrollView>
