Modifs before presentation

--- a/AlarmeDeluxe/app/src/main/res/layout/alarm_ringing_luminosity.xml
+++ b/AlarmeDeluxe/app/src/main/res/layout/alarm_ringing_luminosity.xml
@@ -3,4 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/txt_luminosity"
+        android:textSize="80sp"
+        android:gravity="center" />
 </LinearLayout>
